[package]
name = "ptolemy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = {version = "1.0.164", features = ["derive"]}
diesel = "2.1.0"
serde_json = "1.0.103"
geoutils = {version = "0.5.1", features = ["serde"]}
chrono = {version = "0.4.26", features = ["serde"] }
anyhow = "1.0.72"